Networking/CNI & Networking Plugins/calico-test-pods.yaml
kubectl apply -f - << EOF
apiVersion: v1
kind: Pod
metadata:
  name: calico-test-pod-1
  namespace: network-test
spec:
  containers:
  - name: test-container
    image: busybox:1.35
    command: ['sleep', '3600']
---
apiVersion: v1
kind: Pod
metadata:
  name: calico-test-pod-2
  namespace: network-test
spec:
  containers:
  - name: test-container
    image: busybox:1.35
    command: ['sleep', '3600']
