Networking/CNI & Networking Plugins/cross-namespace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cross-namespace-pod
  namespace: cross-test
spec:
  containers:
  - name: test-container
    image: nicolaka/netshoot:latest
    command: ['sleep', '3600']
