Networking/CNI & Networking Plugins/network-performance-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iperf3-server
  namespace: network-test
  labels:
    app: iperf3-server
spec:
  containers:
  - name: iperf3-server
    image: networkstatic/iperf3:latest
    command: ['ipe']
