Networking/CNI & Networking Plugins/test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-1
  namespace: network-test
  labels:
    app: network-test
spec:
  containers:
  - name: test-container
    image: busybox:1.35
    command: ['sleep', '3600']
  nodeSelector:
    kubernetes.io/hostname: worker-node-1
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-2
  namespace: network-test
  labels:
    app: network-test
spec:
  containers:
  - name: test-container
    image: busybox:1.35
    command: ['sleep', '3600']
  nodeSelector:
    kubernetes.io/hostname: worker-node-2
